<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/horseriding"
            style="@style/Banner"/>

        <TextView
            android:text="@string/welcome_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Header"/>

        <RelativeLayout
            android:id="@+id/Menu"
            style="@style/ViewGroup">

            <ImageView
                android:id="@+id/meet_horses_image"
                android:src="@drawable/meethorses"
                style="@style/MenuImage"/>

            <TextView
                android:id="@+id/meet_horses_text_view"
                android:text="@string/meet_horses"
                android:layout_toRightOf="@+id/meet_horses_image"
                style="@style/MenuText"/>

            <ImageView
                android:id="@+id/lessons_image"
                android:src="@mipmap/lessons"
                android:layout_below="@id/meet_horses_image"
                style="@style/MenuImage"/>

            <TextView
                android:id="@+id/lessons_text_view"
                style="@style/MenuText"
                android:layout_below="@id/meet_horses_image"
                android:layout_toRightOf="@id/lessons_image"
                android:inputType="textMultiLine"
                android:text="@string/riding_lessons"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/event_image"
                android:src="@mipmap/events"
                android:layout_below="@id/lessons_image"
                style="@style/MenuImage"/>

            <TextView
                android:id="@+id/event_text_view"
                android:text="@string/upcoming_events"
                android:layout_toRightOf="@id/event_image"
                android:layout_below="@id/lessons_image"
                style="@style/MenuText"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:layout_margin="10dp"
            style="@style/SubHeader"/>

        <RelativeLayout
            android:id="@+id/ContactInfo"
            style="@style/ViewGroup">

            <ImageView
                android:id="@+id/timetable_image"
                android:src="@drawable/timetable"
                style="@style/ContactIcon"/>

            <TextView
                android:id="@+id/timetable_text_view"
                android:text="@string/timetable"
                android:layout_toRightOf="@+id/timetable_image"
                style="@style/ContactText"/>

            <ImageView
                android:id="@+id/phone_image"
                android:src="@drawable/phone"
                android:layout_below="@+id/timetable_image"
                style="@style/ContactIcon"/>

            <TextView
                android:id="@+id/phone_text_view"
                android:text="@string/phone_number"
                android:autoLink="phone"
                android:layout_toRightOf="@+id/phone_image"
                android:layout_below="@+id/timetable_text_view"
                android:layout_marginTop="30dp"
                style="@style/ContactText"/>

            <ImageView
                android:id="@+id/location_image"
                android:src="@drawable/location"
                android:layout_below="@+id/phone_image"
                style="@style/ContactIcon"/>

            <TextView
                android:id="@+id/location_text_view"
                android:text="@string/location"
                android:autoLink="map"
                android:layout_toRightOf="@+id/location_image"
                android:layout_below="@+id/phone_text_view"
                android:layout_marginTop="25dp"
                style="@style/ContactText"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>